--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,4 @@
+
 <p>
 	<strong> Title: </strong>
 	<%= @post.title %>
@@ -27,4 +28,5 @@
 <% end %>
 
 <h2>Comments</h2>
-<%= render @post.comments %>
+<%= render @comentarios %>
+<%= paginate @comentarios %>  
