--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,25 +1,49 @@
-<h1>Mis posts</h1>
-<table>
-	<tr> <th> Titulo </th> <th>Texto</th> </tr>
-	<th></th>
-    <th></th>
-    <th> </th>
+<!DOCTYPE html>
+<html>
+<body>
+	<div id="wrapper">
+	<h1>Mis posts</h1>
+	<table class="table table-striped">
+		<tr> <th> Titulo </th> <th>Texto</th> </tr>
+		<th></th>
+	    <th></th>
+	    <th> </th>
 
 
-	<% @posts.each do |post| %>
+		<% @posts.each do |post| %>
 
-	<tr>
-		<td><%= post.title %></td>
-		<td><%= post.text %></td> 
-		<td><%= link_to 'Show', post_path(post) %></td>
-    	<td><%= link_to 'Edit', edit_post_path(post) %></td>
-    	 <td><%= link_to 'Destroy', post_path(post),
-             method: :delete, data: { confirm: '¿Estás seguro?' } %></td>
+		<tr>
+			<td><%= post.title %></td>
+			<td><%= post.text %></td> 
+			<td><%= link_to 'Show', post_path(post) %></td>
+	    	<td><%= link_to 'Edit', edit_post_path(post) %></td>
+	    	 <td><%= link_to 'Destroy', post_path(post),
+	             method: :delete, data: { confirm: '¿Estás seguro?' } %></td>
 
-	</tr>
+		</tr>
 
-	<% end %>
+		<% end %>
 
-</table>
+	</table>
 
-<%= link_to 'Nuevo post', new_post_path %>
+
+
+	<%= link_to 'Nuevo post', new_post_path %>
+
+	<br>
+
+	<%= paginate @posts %>
+	</div>
+</body>
+
+<style>
+	#wrapper {
+	  width: 50%;
+	  margin: 0 auto;
+	  
+	}
+
+</style>
+
+</html>
+
