--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,5 @@
 
+<div id="body">
 <p>
 	<strong> Title: </strong>
 	<%= @post.title %>
@@ -18,6 +19,7 @@
     <%= f.label :commenter %><br />
     <%= f.text_field :commenter %>
   </p>
+  
   <p>
     <%= f.label :body %><br />
     <%= f.text_area :body %>
@@ -28,5 +30,16 @@
 <% end %>
 
 <h2>Comments</h2>
-<%= render @comentarios %>
-<%= paginate @comentarios %>  
+<table class="table table-striped">
+  <%= render @comentarios %>
+  </table>
+  <%= paginate @comentarios %>
+
+</div>
+
+<style>
+  #body {
+    margin: auto;
+    width: 50%;
+  }
+</style>
